--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,16 +47,16 @@ jobs:
       - name: Run Unit Tests
         run: npm run test
 
-      - name: Run Detox tests 
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 31
-          arch: x86_64
-          avd-name: Android_API31
-          force-avd-creation: false
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -no-metrics
-          disable-animations: false
-          script: npm run detox:android:test:ci
+      # - name: Run Detox tests 
+      #   uses: reactivecircus/android-emulator-runner@v2
+      #   with:
+      #     api-level: 3
+      #     arch: x86_64
+      #     avd-name: Pixel_6a_API_34
+      #     force-avd-creation: false
+      #     emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -no-metrics
+      #     disable-animations: false
+      #     script: npm run detox:android:test:ci
 
    #  - name: Build Detox and Run E2E Tests
       #   run: |
